--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "StellaratorGrids"
 uuid = "2fa94731-8949-47e3-a940-b1a4085b105f"
-authors = ["Benjamin Faber <bfaber@wisc.edu> and contributors"]
+authors = ["Aaron Bader <abader@wisc.edu>"]
 version = "0.1.0"
 
 [compat]
