--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Aaron Bader <abader@wisc.edu>"]
 version = "0.1.1"
 
 [deps]
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 PlasmaEquilibriumToolkit = "57ef8d28-8191-49ce-8cf8-17f9379aac88"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
