--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ PlasmaEquilibriumToolkit = "0.4, 0.5"
 Plots = "1"
 Requires = "1"
 Roots = "1, 2"
-VMEC = "0.4, 0.5"
+VMEC = "0.6"
 julia = "1.7"
 
 [extras]
