--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "StellaratorGrids"
 uuid = "2fa94731-8949-47e3-a940-b1a4085b105f"
 authors = ["Aaron Bader <abader@wisc.edu>"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -12,12 +12,12 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 VMEC = "2b46c670-0004-47b5-bf0a-1741584931e9"
 
 [compat]
-PlasmaEquilibriumToolkit = "0.4, 0.5"
+PlasmaEquilibriumToolkit = "0.6, 0.7"
 Plots = "1"
 Requires = "1"
 Roots = "1, 2"
-VMEC = "0.6"
-julia = "1.7"
+VMEC = "0.6, 0.7"
+julia = "1.7, 1.8
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
