--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ PlasmaEquilibriumToolkit = "0.6, 0.7"
 Plots = "1"
 Requires = "1"
 Roots = "1, 2"
-VMEC = "0.6, 0.7"
+VMEC = "0.6, 0.7, 0.8"
 julia = "1.7, 1.8"
 
 [extras]
